# Montezuma

./: .gitignore  CMakeLists.txt  CMakePresets.json  Log.txt  README.md  dump.txt  fens3.fen  test.sh  tester.sh
.cache/clangd/index/: engine.cpp.BB95CE1AE4219239.idx  engine.h.4A0B0B775B177837.idx  main.cpp.FD56AD99E27D84AF.idx  thc.cpp.980E2B233CC414ED.idx  thc.h.BDCB63AE8764A9A2.idx
.github/workflows/: CI.yml  cmake-single-platform.yml
build_2/: CMakeCache.txt  CPackConfig.cmake  CPackSourceConfig.cmake  Makefile  cmake_install.cmake  compile_commands.json  montezuma
cmake/: installMontezuma.cmake
include/: book.h  engine.h  hashTable.h  hashing.h  thc.h
include/montezuma/: book.h  engine.h  hashing.h
include/thc/: thc.h
res/: MatesIn2.txt  MatesIn3.txt  TODO.txt  m8n2.txt
src/: CMakeLists.txt  DrawDetectionDemo.cpp  TODO.txt  book.cpp  demo.cpp  engine.cpp  hashing.cpp  m8n3.txt  main.cpp  resultReader.cpp  sandbox.cpp  tester.cpp  thc.cpp
test/: CMakeLists.txt  solveMates.cpp  solveMates.sh  test.cpp  test.sh
